feat: Add BuyerState PDA display, auto-connect, and staking improvements
- Added My BuyerState section to show user's PDA address
- Fixed optIntoStaking transaction sending (replaced signAndSendTransaction)
- Enabled auto-connect wallet on page refresh (onlyIfTrusted mode)
- Fixed Buffer usage in browser (replaced with TextEncoder)
- Added calculate-buyerstate.js script for PDA calculation
- Added check-presale-stakers.js script with .env support
- Updated env.example with correct Program IDs from anchor keys list
- Added comprehensive documentation in docs/ folder
- Installed dotenv for .env support in Node.js scripts
- Removed Buyers & Stakers Registry section (admin only feature)
- Synced all Program IDs across config files

--- a/env.example
+++ b/env.example
@@ -7,14 +7,14 @@ FALLBACK_RPC=https://api.devnet.solana.com
 MAINNET_RPC=https://api.mainnet-beta.solana.com
 NETWORK=devnet
 
-# Smart Contract Program IDs
-PRESALE_V3_PROGRAM_ID=62kSXjshfq3FF4Ny4qvmkhaYjSagYR18njWwDh6sFi9N
-STAKING_PROGRAM_ID=HNQ66x9jd7tdghh4KyeyJbtEqBC7NDw1CyU5fiERS6DW
-VESTING_PROGRAM_ID=HXiAcHVkxdpAkeyFtu47mRkcEF3AxjqmGV7kfcunnaLY
+# Smart Contract Program IDs (DEVNET - from anchor keys list)
+PRESALE_V3_PROGRAM_ID=HNPuLPxycypT4YtD5vMZPdcrr53MLKAajYrQwNTv4ujH
+STAKING_PROGRAM_ID=3ZaKegZktvjwt4SreDvitLECG47UnPdd4EFzNAnyHDaW
+VESTING_PROGRAM_ID=3EnPSZpZbKDwVetAiXo9bos4XMDvqg1yqJvew8zh4keP
 
 # Token Configuration (Devnet)
 USDC_MINT=4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
-VIBES_MINT=YOUR_VIBES_MINT_ADDRESS
+VIBES_MINT=C4SeJZr8wJ6BrNUJP52vGZf6QMunWFRgx6kbkb56j3vW
 
 # Presale Configuration
 PRESALE_START_TS=0
