Fix: Rewards calculation and UI improvements
- Fixed rewards display showing 0 when contract accRewardPerToken is low
- Added time-based fallback calculation for accurate rewards display
- Enhanced debug logging for rewards calculation
- Removed mock data that was overwriting real contract data
- Updated Tokenomics table: new Donation wallet and unlock date
- Added comprehensive documentation for all fixes
- Hosted Lucide icons locally to avoid CDN blocking
- Improved price API with caching and fallback mechanism
- Fixed Trust Wallet detection and connection issues
- Enhanced wallet detection with multiple strategies
- Created debug tools for wallet and rewards troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,33 @@ verify-contract-*.js
 fix-*.js
 temp-*.js
 debug-*.js
+
+# ===================================
+# CRITICAL SECURITY - Wallet Protection
+# ===================================
+
+# Wallet files and directories (NEVER commit private keys)
+wallets/
+*keypair*
+*.key
+*.seed
+*.private
+*wallet*.json
+
+# Allow specific wallet-related documentation
+!wallets/README.md
+!wallets/.gitkeep
+
+# ===================================
+# CRITICAL SECURITY - API Keys and Secrets
+# ===================================
+
+# Configuration files that may contain secrets
+config.local.js
+config.production.js
+*secret*
+*private*
+
+# Backup of configuration files
+*.config.backup
+config.*.bak
